Fixed 'Add Action' btn being cutoff on certain screen size

--- a/app/static_src/less/partials/cube_img_blocks.less
+++ b/app/static_src/less/partials/cube_img_blocks.less
@@ -85,6 +85,7 @@
 .cube-img-block.add-action.mod-only{
   width:100%;
   margin-bottom:2rem;
+  height: auto;
 }
 
 .cube-img-block.add-action.mod-only h3{
